--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@
 
 /spec/examples.txt
 /config/database.yml
+/config/deploy-secrets/*
 /config/secrets.yml
 /config/deploy-secrets.yml
 /config/deploy-secrets-cli_auf.yml
