--- a/config/elasticsearch.yml
+++ b/config/elasticsearch.yml
@@ -8,7 +8,7 @@ test:
 staging:
   <<: *default
 production:
-  host: ''
+  host: 'http://localhost:9200/'
   transport_options:
     request:
       timeout: !!integer 300
